# BEVoid

./: .gitignore  CMakeLists.txt  COPYRIGHT  LICENSE  README.md  build-android.bat  build-linux.sh
.github/workflows/: build-android.yml  build-linux.yml
android/: build.gradle  gradle.properties  gradlew  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/mipmap-hdpi/: ic_launcher.xml
android/app/src/main/res/values/: strings.xml
src/assets/: bevoid.rc
src/assets/fonts/: font.json
src/be/void/: Game.cpp  Game.h  Vec3.h
src/be/void/core/: Core.cpp  Core.h
src/be/void/core/input/: Input.cpp  Input.h
src/be/void/core/movement/: Movement.cpp  Movement.h
src/be/void/core/render/: Render.cpp  Render.h  SkyRenderer.cpp  SkyRenderer.h
src/be/void/core/render/chunk/: BiomeNoise.cpp  BiomeNoise.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  Noise.cpp  Noise.h
src/be/void/core/render/font/: FontAtlas.cpp  FontAtlas.h  FontRenderer.cpp  FontRenderer.h  Glyph.h
src/be/void/core/render/world/: Biome.cpp  Biome.h  BiomeTypes.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  Constants.h  Noise.cpp  Noise.h  Structures.cpp  Structures.h
src/be/void/core/render/world/biome/: Biome.cpp  Biome.h  BiomeNoise.cpp  BiomeNoise.h
src/be/void/core/render/world/chunk/: Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  Noise.cpp  Noise.h
src/be/void/network/: Network.cpp  Network.h
src/be/void/physics/: Cycles.cpp  Cycles.h  Physics.cpp  Physics.h
src/be/void/physics/metrics/: Units.h
src/be/void/screens/: GameScreen.cpp  GameScreen.h  MenuScreen.cpp  MenuScreen.h  NewWorldScreen.cpp  NewWorldScreen.h  Screen.cpp  Screen.h  WorldsScreen.cpp  WorldsScreen.h
src/be/void/world/: WorldManager.cpp  WorldManager.h  WorldMeta.h
src/com/bevoid/aporia/system/: ApiRender.cpp  ApiRender.h  OsManager.cpp  OsManager.h  SystemInfo.h
src/drivers/: EglWindowDriver.cpp  EglWindowDriver.h  GlfwWindowDriver.cpp  GlfwWindowDriver.h  IRenderer.h  IWindowDriver.h
src/plasma/shaders/: plasma.frag
src/shaders/: sky.frag  sky.vert  terrain.frag  terrain.vert
